Closed
Bug 1741343
Opened 4 years ago
Closed 4 years ago
getGamepads() should return empty array when doc is not fully active
Categories
(Core :: DOM: Device Interfaces, defect)
Core
DOM: Device Interfaces
Tracking
()
RESOLVED
FIXED
96 Branch
| Tracking | Status | |
|---|---|---|
| firefox96 | --- | fixed |
People
(Reporter: marcos, Assigned: marcos)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.1 Safari/605.1.15
Steps to reproduce:
Call getGamepad() from a non-fully active document.
Actual results:
When missing a window, the current code throws ERR_UNEXPECTED.
Expected results:
It should just return an empty array.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::DOM: Core & HTML' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Updated•4 years ago
|
Component: DOM: Core & HTML → DOM: Device Interfaces
Updated•4 years ago
|
Assignee: nobody → marcos
Pushed by marcos@marcosc.com:
https://hg.mozilla.org/integration/autoland/rev/ff7d6b00acbd
getGamePads() should return empty array if document is not fully active r=saschanaz
Comment 4•4 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
status-firefox96:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•