Bug 1741343 - getGamePads() should return empty array if document is not fully active r=saschanaz

see https://github.com/w3c/gamepad/pull/157

Differential Revision: https://phabricator.services.mozilla.com/D131321